@@ -4,6 +4,11 @@
 Note: This file contains only changes in the 'default' branch.
 
 
+2015-10-04
+
+  - Implemented --output=<filename> option for bean-query tool.
+
+
 2015-10-02
 
   - Implemented an experimental new Query directive whose purpose is to define
